# Flux_Project

./: .gitignore  README.md  ai_critic.py  ai_solver.py  main.py  pip_list.txt  pyproject.toml  requirements.txt
flux_cli/: ai_critic.py  ai_solver.py  main.py  safety_guard.py  system_scanner.py
flux_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flux_cli/flux_cli.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
srcs/: get_err_log_from_pip.py
srcs/gemini_api/: Comunicate_gemini.py
